fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,9 @@
 }
 
 body {
-
   padding: 0;
   margin: 0;
-
 }
-
-
-
 
 .italic {
   font-style: italic !important;
@@ -130,7 +125,7 @@ body {
   color: whitesmoke;
   font-family: "Oswald", sans-serif;
   margin: 0 auto;
-  background-color: rgb(0, 0 , 0, .8 );
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
 .credentials-container {
@@ -198,7 +193,7 @@ body {
 
 .logo-images img {
   max-width: 150px;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* RESUME */
@@ -354,7 +349,6 @@ h4 {
   font-style: italic;
   max-width: fit-content;
   font-size: 14px;
-
 }
 
 .softSkills {
@@ -646,7 +640,7 @@ header {
 
 @media (max-width: 350px) {
   .logo-images img {
-    max-width: 100px;
-    padding: 20px;
+    max-width: 75px;
+    padding: 10px;
   }
 }
